# backend

./: Cargo.toml  Dockerfile  test_database.surql
.github/workflows/: deploy-cloudrun.yml
db/: JOE_GOSNELL1_9495.ods  JOE_GOSNELL2_372.ods  classes.sql  export.py  req.sql
premade_schedules/: compsci.json  math.json  sample_schedule.json
src/: main.rs
starting class jsons/: compsci.json
