[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
rocket = "0.5.0-rc.3"
serde_derive = "1.0.188"
time = "0.3.28"
serde = "1.0.188"
rocket_contrib = "0.4.11"
