[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version="=0.5.0", features = ["json"] }
serde_derive = "1.0.188"
time = "0.3.28"
serde = "1.0.188"
surrealdb = "1.0.0"
validator = "0.16.1"
